plugins/javaFX/testData/highlighting/nullObjectValue.fxml
<?import javafx.scene.control.Button?>
<?import javafx.scene.layout.VBox?>
<?import javafx.scene.control.Label?>
<VBox xmlns="http://javafx.com/javafx/8.0.91">
  <Label text="${null}" textAlignment="$null "/>
  <Button text="$null " tooltip="$null" textAlignment="${null}"/>
  <Label text=<error descr="Spaces aren't allowed before property or expression">" ${null}"</error>/>
  <Label text=<error descr="Spaces aren't allowed before property or expression">" $null"</error>/>
</VBox>